# playground

./: .gitignore
elixir_telegram_bot_hello/: .gitignore  README.md  mix.exs
elixir_telegram_bot_hello/config/: .gitignore  dev.exs
elixir_telegram_bot_hello/lib/: hello_bot.ex
elixir_telegram_bot_hello/lib/hello_bot/: application.ex  chain_context.ex  chain_handler.ex  updates_poller.ex
elixir_telegram_bot_hello/test/: elixir_telegram_bot_hello_test.exs
game_of_life/game_of_life_c/: game_of_life_c.c
game_of_life/game_of_life_cpp/: game_of_life_cpp.cpp
game_of_life/game_of_life_elisp/: game_of_life.el
game_of_life/game_of_life_golang/: go.mod  main.go
game_of_life/game_of_life_javascript/: index.html
game_of_life/game_of_life_lua/: game_of_life.lua
game_of_life/game_of_life_python/: main.py
game_of_life/game_of_life_rust/: Cargo.toml
game_of_life/game_of_life_rust/src/: main.rs
maze/python/: maze_cli.py  maze_generator.py  maze_tk.py  test.maze
maze/python/maze_lib/: __init__.py  cell.py  directions.py  maze.py  types.py  wfc.py
maze/rust/maze/: Cargo.toml
maze/rust/maze_tui/: Cargo.toml
maze/rust/maze_tui/src/: animation.rs  app.rs  event.rs  handler.rs  lib.rs  main.rs  maze_grid.rs  tui.rs  ui.rs
seam_carving/python/: seam_carving.py
seam_carving/rust_seam_carving/: Cargo.toml
sorting/c/: bubble_sort.c  selection_sort.c  utils.c  utils.h
sorting/elisp/: bubble_sort.el
sorting/javascript/: bubble_sort.js  selection_sort.js
sorting/lua/: bubble_sort.lua
sorting/python/: bubble_sort.py  selection_sort.py
(+71 files in other folders)
